--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:pm2":"pm2 start ecosystem.config.cjs --no-daemon"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "cloudinary": "^1.32.0",
     "dotenv": "^6.2.0",
     "express": "^4.18.2",
+    "pm2": "^5.2.2",
     "puppeteer": "^1.20.0",
     "puppeteer-core": "^19.2.2"
   }
